# datasources-smk

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-snakemake.yaml  ci.yaml  main.yaml
.test/config/: datasources.tsv
config/: config.yaml  datasources.tsv
src/datasources/: __main__.py  cli.py  url.py  utils.py
src/datasources/.test/config/: config.yaml  datasources.tsv
src/datasources/workflow/: Snakefile
src/datasources/workflow/rules/: common.smk  utils.smk
src/datasources/workflow/schemas/: config.schema.yaml  datasources.schema.yaml
src/datasources/workflow/scripts/: datasources_get_external.py
tests/: conftest.py  test_url.py
workflow/: Snakefile
workflow/rules/: common.smk  url.py  utils.smk
workflow/schemas/: config.schema.yaml
workflow/scripts/: datasources_get_external.py
workflow/wrappers/utils/datasources_get_external/: environment.yaml  meta.yaml  wrapper.py
